Update swagger docs (for plaintext endpoints)
